Java 20 (#4)
* Upgrade gradle

* Upgrade javafx plugin

* Upgrade kotlin plugin

* Upgrade JavaFX

* Upgrade koin

* Upgrade dependecies

* Fix regression issues

---------

Co-authored-by: Алексей Гардер <aleksey_garder@outlook.com>